# pptk-revived

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build-test.yml  build-wheels.yml  unit-tests.yml
cmake/: FindEigen.cmake  FindNumpy.cmake  FindTBB.cmake
examples/: documentation_examples.ipynb  jupyter_interactive_demo.ipynb  quickstart.ipynb
pptk/: __init__.py  colors.py  dimreduce.py  ply.py  projection.py
pptk/kdtree/: CMakeLists.txt
pptk/kdtree/src/: kdtree-impl.h  kdtree.h
pptk/libs/: CMakeLists.txt
pptk/points/: points.py
pptk/processing/estimate_normals/: CMakeLists.txt  estimate_normals.cpp
pptk/vfuncs/: CMakeLists.txt
pptk/viewer/: CMakeLists.txt  line_renderer.h  octree.h  point_cloud.h  viewer.h  viewer.py
pptk_revived/: __init__.py
tests/: conftest.py  test_animate.py  test_append.py  test_build.py  test_camera_math.py  test_camera_preserve.py  test_capture.py  test_connect.py  test_depth_capture.py  test_estimate_normals.py  test_hidpi.py  test_hover_details.py  test_jupyter_repr.py  test_label_colors.py  test_large_coordinates.py  test_lines.py  test_memory_validation.py  test_module_set.py  test_nonblocking.py  test_per_point_size.py  test_ply_loader.py  test_point_shape.py  test_points.py  test_polygon_selection.py  test_projection.py  test_record.py  test_reduce_dims.py  test_socket.py  test_uv_compat.py  test_vfuncs.py  test_window_resize.py
